--- a/Contra/05-SceneManager.vcxproj
+++ b/Contra/05-SceneManager.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="Equip_EnemyGun_Sniper.cpp" />
     <ClCompile Include="Equip_GunBase.cpp" />
     <ClCompile Include="Equip_Gun_N.cpp" />
+    <ClCompile Include="Equip_Gun_R.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="Game_Blocker.cpp" />
     <ClCompile Include="Game_Bullet.cpp" />
@@ -189,6 +190,7 @@
     <ClCompile Include="Mapper.cpp" />
     <ClCompile Include="MusicManager.cpp" />
     <ClCompile Include="Obj_Bullet_N.cpp" />
+    <ClCompile Include="Obj_Bullet_R.cpp" />
     <ClCompile Include="Obj_ContraBot.cpp" />
     <ClCompile Include="Obj_EnemyBullet_N.cpp" />
     <ClCompile Include="Obj_SmartBot.cpp" />
@@ -234,6 +236,7 @@
     <ClInclude Include="Equip_EnemyGun_N.h" />
     <ClInclude Include="Equip_EnemyGun_Sniper.h" />
     <ClInclude Include="Equip_GunBase.h" />
+    <ClInclude Include="Equip_Gun_R.h" />
     <ClInclude Include="fmod\fmod.h" />
     <ClInclude Include="fmod\fmod.hpp" />
     <ClInclude Include="fmod\fmod_codec.h" />
@@ -266,6 +269,7 @@
     <ClInclude Include="Mapper.h" />
     <ClInclude Include="MusicManager.h" />
     <ClInclude Include="Obj_Bullet_N.h" />
+    <ClInclude Include="Obj_Bullet_R.h" />
     <ClInclude Include="Obj_ContraBot.h" />
     <ClInclude Include="Obj_EnemyBullet_N.h" />
     <ClInclude Include="Obj_SmartBot.h" />
