Add Weapon: Laser Gun

--- a/Contra/05-SceneManager.vcxproj.filters
+++ b/Contra/05-SceneManager.vcxproj.filters
@@ -209,6 +209,8 @@
     </ClCompile>
     <ClCompile Include="Equip_Gun_S.cpp" />
     <ClCompile Include="Obj_Bullet_S.cpp" />
+    <ClCompile Include="Equip_Gun_L.cpp" />
+    <ClCompile Include="Obj_Bullet_L.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Animation.h">
@@ -463,6 +465,8 @@
     </ClInclude>
     <ClInclude Include="Equip_Gun_S.h" />
     <ClInclude Include="Obj_Bullet_S.h" />
+    <ClInclude Include="Equip_Gun_L.h" />
+    <ClInclude Include="Obj_Bullet_L.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
