--- a/Contra/05-SceneManager.vcxproj
+++ b/Contra/05-SceneManager.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="Equip_EnemyGun_N.cpp" />
     <ClCompile Include="Equip_EnemyGun_Sniper.cpp" />
     <ClCompile Include="Equip_GunBase.cpp" />
+    <ClCompile Include="Equip_Gun_L.cpp" />
     <ClCompile Include="Equip_Gun_N.cpp" />
     <ClCompile Include="Equip_Gun_R.cpp" />
     <ClCompile Include="Equip_Gun_S.cpp" />
@@ -193,6 +194,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mapper.cpp" />
     <ClCompile Include="MusicManager.cpp" />
+    <ClCompile Include="Obj_Bullet_L.cpp" />
     <ClCompile Include="Obj_Bullet_N.cpp" />
     <ClCompile Include="Obj_Bullet_R.cpp" />
     <ClCompile Include="Obj_Bullet_S.cpp" />
@@ -244,6 +246,7 @@
     <ClInclude Include="Equip_EnemyGun_N.h" />
     <ClInclude Include="Equip_EnemyGun_Sniper.h" />
     <ClInclude Include="Equip_GunBase.h" />
+    <ClInclude Include="Equip_Gun_L.h" />
     <ClInclude Include="Equip_Gun_R.h" />
     <ClInclude Include="Equip_Gun_S.h" />
     <ClInclude Include="fmod\fmod.h" />
@@ -280,6 +283,7 @@
     <ClInclude Include="KeyEventHandler.h" />
     <ClInclude Include="Mapper.h" />
     <ClInclude Include="MusicManager.h" />
+    <ClInclude Include="Obj_Bullet_L.h" />
     <ClInclude Include="Obj_Bullet_N.h" />
     <ClInclude Include="Obj_Bullet_R.h" />
     <ClInclude Include="Obj_Bullet_S.h" />
