--- a/Contra/05-SceneManager.vcxproj
+++ b/Contra/05-SceneManager.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="Equip_EnemyGun_N.cpp" />
     <ClCompile Include="Equip_EnemyGun_Sniper.cpp" />
     <ClCompile Include="Equip_GunBase.cpp" />
+    <ClCompile Include="Equip_Gun_L.cpp" />
     <ClCompile Include="Equip_Gun_N.cpp" />
     <ClCompile Include="Equip_Gun_R.cpp" />
     <ClCompile Include="Equip_Gun_S.cpp" />
@@ -181,6 +182,7 @@
     <ClCompile Include="Game_MovableEnemy.cpp" />
     <ClCompile Include="Game_MovableObject.cpp" />
     <ClCompile Include="Game_ObjectBase.cpp" />
+    <ClCompile Include="Game_Picture.cpp" />
     <ClCompile Include="Game_Platform.cpp" />
     <ClCompile Include="Game_Player.cpp" />
     <ClCompile Include="Game_Screen.cpp" />
@@ -193,6 +195,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mapper.cpp" />
     <ClCompile Include="MusicManager.cpp" />
+    <ClCompile Include="Obj_Bullet_L.cpp" />
     <ClCompile Include="Obj_Bullet_N.cpp" />
     <ClCompile Include="Obj_Bullet_R.cpp" />
     <ClCompile Include="Obj_Bullet_S.cpp" />
@@ -204,6 +207,7 @@
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Scene_Base.cpp" />
     <ClCompile Include="Scene_Battle.cpp" />
+    <ClCompile Include="Scene_LoadingStage.cpp" />
     <ClCompile Include="ScreenManager.cpp" />
     <ClCompile Include="Spatial.cpp" />
     <ClCompile Include="spawnBulletHelper.cpp" />
@@ -245,6 +249,7 @@
     <ClInclude Include="Equip_EnemyGun_N.h" />
     <ClInclude Include="Equip_EnemyGun_Sniper.h" />
     <ClInclude Include="Equip_GunBase.h" />
+    <ClInclude Include="Equip_Gun_L.h" />
     <ClInclude Include="Equip_Gun_R.h" />
     <ClInclude Include="Equip_Gun_S.h" />
     <ClInclude Include="fmod\fmod.h" />
@@ -269,6 +274,7 @@
     <ClInclude Include="Game_MovableEnemy.h" />
     <ClInclude Include="Game_MovableObject.h" />
     <ClInclude Include="Game_ObjectBase.h" />
+    <ClInclude Include="Game_Picture.h" />
     <ClInclude Include="Game_Platform.h" />
     <ClInclude Include="Game_Player.h" />
     <ClInclude Include="Game_Screen.h" />
@@ -281,6 +287,7 @@
     <ClInclude Include="KeyEventHandler.h" />
     <ClInclude Include="Mapper.h" />
     <ClInclude Include="MusicManager.h" />
+    <ClInclude Include="Obj_Bullet_L.h" />
     <ClInclude Include="Obj_Bullet_N.h" />
     <ClInclude Include="Obj_Bullet_R.h" />
     <ClInclude Include="Obj_Bullet_S.h" />
@@ -291,6 +298,7 @@
     <ClInclude Include="Scene.h" />
     <ClInclude Include="Scene_Base.h" />
     <ClInclude Include="Scene_Battle.h" />
+    <ClInclude Include="Scene_LoadingStage.h" />
     <ClInclude Include="ScreenManager.h" />
     <ClInclude Include="Spatial.h" />
     <ClInclude Include="spawnBulletHelper.h" />
